[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/dialog/rename_collection_dialog.gd" type="Script" id=1]
[ext_resource path="res://ui/theme_resource/panel_dialog.tres" type="StyleBox" id=2]

[node name="RenameCollectionDialog" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CC" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="PC" type="PanelContainer" parent="CC"]
margin_left = 379.0
margin_top = 242.0
margin_right = 645.0
margin_bottom = 358.0
custom_styles/panel = ExtResource( 2 )

[node name="VC" type="VBoxContainer" parent="CC/PC"]
margin_left = 8.0
margin_top = 8.0
margin_right = 258.0
margin_bottom = 108.0
custom_constants/separation = 12

[node name="LabelDesc" type="Label" parent="CC/PC/VC"]
margin_right = 250.0
margin_bottom = 14.0
rect_min_size = Vector2( 250, 0 )
text = "Rename collection “%s”"
align = 1

[node name="VC" type="VBoxContainer" parent="CC/PC/VC"]
margin_top = 26.0
margin_right = 250.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="CC/PC/VC/VC"]
margin_right = 250.0
margin_bottom = 14.0
text = "Collection name"

[node name="LineEditName" type="LineEdit" parent="CC/PC/VC/VC"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 42.0

[node name="HC" type="HBoxContainer" parent="CC/PC/VC"]
margin_top = 80.0
margin_right = 250.0
margin_bottom = 100.0
alignment = 1

[node name="ButtonRename" type="Button" parent="CC/PC/VC/HC"]
margin_left = 64.0
margin_right = 128.0
margin_bottom = 20.0
text = "Rename"

[node name="ButtonCancel" type="Button" parent="CC/PC/VC/HC"]
margin_left = 132.0
margin_right = 186.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="text_changed" from="CC/PC/VC/VC/LineEditName" to="." method="_on_LineEditName_text_changed"]
[connection signal="text_entered" from="CC/PC/VC/VC/LineEditName" to="." method="_on_LineEditName_text_entered"]
[connection signal="pressed" from="CC/PC/VC/HC/ButtonRename" to="." method="_on_ButtonRename_pressed"]
[connection signal="pressed" from="CC/PC/VC/HC/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
